fixed collections header overflowing open cart container

--- a/src/components/Home/HomeCollections.module.scss
+++ b/src/components/Home/HomeCollections.module.scss
@@ -3,7 +3,6 @@
 }
 .header {
   position: relative;
-  z-index: 2;
   pointer-events: none;
 }
 .title {
